refactor(search-input): refactor shared search input component
refactor shared search input component with both plain input and auto-complete functionalities.

Includes customizable addon, placeholder, initial value, clear button, and event emitters.

--- a/src/app/components/shared/inputs/search-input/search-input.component.html
+++ b/src/app/components/shared/inputs/search-input/search-input.component.html
@@ -1,37 +1,56 @@
-<div class="flex justify-content-center align-items-center p-3">
+<div class="flex justify-content-center align-items-center">
   <p-input-group>
+    <!-- Addon: Icon or Label -->
     <p-inputgroup-addon
-      class="bg-primary text-white flex align-items-center justify-content-center px-3 border-round-right"
+      class="bg-primary border-round-right flex items-center justify-center px-3 h-2-5rem"
+      [style.width]="addonWidth"
     >
-      <i class="pi pi-search"></i>
+      <ng-container *ngIf="label.trim() === ''; else labelTemplate">
+        <i [class]="icon"></i>
+      </ng-container>
+      <ng-template #labelTemplate>
+        <span class="text-sm text-white" style="white-space: nowrap">
+          {{ label }}
+        </span>
+      </ng-template>
     </p-inputgroup-addon>
 
-    @if (autoComplete) {
-    <p-autoComplete
-      [(ngModel)]="searchTerm"
-      [suggestions]="autoCompleteItem"
-      [optionLabel]="autoCompleteOptionLabel"
-      [optionValue]="autoCompleteOptionValue"
-      (completeMethod)="onLazySearch($event)"
-      [showEmptyMessage]="showEmptyMessage"
-      (onSelect)="onSelectAutoComplete($event)"
-      emptyMessage="موردی یافت نشد"
-      pInputText
-      [placeholder]="placeholder"
-      class="flex-grow-1"
-      styleClass="w-full h-2-5rem"
-    />
+    <!-- Input: AutoComplete or Plain -->
+    <ng-container *ngIf="autoComplete; else plainInput">
+      <p-autoComplete
+        pInputText
+        [(ngModel)]="searchTerm"
+        [formControl]="control"
+        [suggestions]="autoCompleteItem"
+        [optionLabel]="autoCompleteOptionLabel"
+        [optionValue]="autoCompleteOptionValue"
+        [placeholder]="placeholder"
+        [showEmptyMessage]="showEmptyMessage"
+        (completeMethod)="onLazySearch($event)"
+        (onSelect)="onSelectAutoComplete($event)"
+        emptyMessage="موردی یافت نشد"
+        class="flex-grow-1 border-input"
+        styleClass="w-full h-2-5rem"
+      />
+      <div
+        *ngIf="showSelectIcon"
+        class="absolute"
+        style="left: 45px; margin-top: 6px; z-index: 3;"
+      >
+        <i class="pi pi-check-circle text-lg text-green-600"></i>
+      </div>
+    </ng-container>
 
-    } @else {
-    <input
-      [(ngModel)]="searchTerm"
-      (ngModelChange)="onValueChange($event)"
-      (input)="(input)"
-      type="text"
-      pInputText
-      [placeholder]="placeholder"
-      class="flex-grow-1 w-full h-2-5rem"
-    />
-    }
+    <ng-template #plainInput>
+      <input
+        pInputText
+        type="text"
+        [(ngModel)]="searchTerm"
+        (ngModelChange)="onValueChange($event)"
+        [placeholder]="placeholder"
+        [readonly]="readOnly"
+        class="flex-grow-1 w-full h-2-5rem"
+      />
+    </ng-template>
   </p-input-group>
 </div>
