feat(text-input): expose input field via @Input() property

--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -65,6 +65,7 @@
               }"
               (focus)="onFocusInput(inputRef)"
               (blur)="onBlurInput(inputRef)"
+              (input)="input.emit($event)"
             />
           </div>
         </ng-persian-datepicker>
