--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -13,7 +13,15 @@
 
   <div class="flex justify-center items-center p-3 w-full">
     <div class="w-full">
-      <app-search-input class="w-full" (valueChange)="handleSearch($event)" />
+      <app-search-input
+        class="w-full"
+        [data]="allLoadAnnouncementPlaces"
+        [filterFn]="filterAnnouncementPlaces"
+        [autoSearch]="true"
+        [showAllWhenQueryTooShort]="true"
+        [minLength]="2"
+        (search)="handleSearch($event)"
+      />
     </div>
   </div>
 </p-panel>
