--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -66,6 +66,7 @@
               (focus)="onFocusInput(inputRef)"
               (blur)="onBlurInput(inputRef)"
               (input)="input.emit($event)"
+              (keydown)="onKeyDown($event)"
             />
           </div>
         </ng-persian-datepicker>
