fix(home-page): rename props to match updated app-text-input component

--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -15,12 +15,12 @@
     <div class="w-full">
       <app-search-input
         class="w-full"
-        [data]="allLoadAnnouncementPlaces"
-        [filterFn]="filterAnnouncementPlaces"
-        [autoSearch]="true"
-        [showAllWhenQueryTooShort]="true"
-        [minLength]="2"
-        (search)="handleSearch($event)"
+        [staticData]="allLoadAnnouncementPlaces"
+        [itemMatchesQuery]="filterAnnouncementPlaces"
+        [autoTriggerSearch]="true"
+        [fallbackToAllWhenQueryShort]="true"
+        [minSearchLength]="2"
+        (searchResult)="handleSearch($event)"
       />
     </div>
   </div>
