--- a/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
+++ b/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
@@ -1,25 +1,21 @@
 <div class="p-fluid grid gap-4 relative">
   <form
     class="col-12"
-    (ngSubmit)="fetchUserByPhone()"
     [class.pointer-events-none]="loading"
     [class.opacity-60]="loading"
     [formGroup]="searchForm"
   >
     <!-- Search Phone + Refresh -->
     <div class="flex gap-2">
-      <app-text-input
-        label="شماره تلفن"
+      <app-search-input
+        label="شماره موبایل"
         class="flex-1"
         placeholder="جستجو کاربر"
         [control]="searchPhone"
-      />
-      <p-button
-        type="submit"
-        icon="pi pi-search"
-        styleClass="mt-1 w-2rem h-2rem border-circle"
-        (click)="fetchUserByPhone()"
-        [disabled]="this.searchForm.invalid || loading"
+        validationField="mobile"
+        [disableSearchButton]="this.searchForm.invalid || loading"
+        [singleResultSearchFn]="fetchUserByPhone"
+        (searchResult)="onSearch($event)"
       />
     </div>
   </form>
@@ -77,7 +73,11 @@
 
     <!-- User Type -->
     <div class="col-12 md:col-5">
-      <app-select-input icon="pi pi-users" [control]="userType" [options]="roles" />
+      <app-select-input
+        icon="pi pi-users"
+        [control]="userType"
+        [options]="roles"
+      />
     </div>
 
     <!-- Radio: SMS System -->
@@ -135,40 +135,4 @@
       ></p-button>
     </div>
   </form>
-
-  <div class="card flex justify-center">
-    <p-dialog
-      header="رمز عبور جدید"
-      [modal]="true"
-      (onHide)="onCloseDialog()"
-      [(visible)]="passwordDialogVisible"
-      [style]="{ width: '25rem' }"
-    >
-      <div class="flex gap-3 flex-column">
-        <div class="flex align-items-center justify-content-between">
-          <span class="w-8rem"> شناسه کابری: </span>
-          <p-button
-            (click)="copyToClipboard(userNameDialog)"
-            size="small"
-            styleClass="px-4 w-10rem"
-            severity="info"
-          >
-            {{ userNameDialog }}
-          </p-button>
-        </div>
-
-        <div class="flex align-items-center justify-content-between">
-          <span class="w-8rem"> رمز عبور جدید </span>
-          <p-button
-            (click)="copyToClipboard(newUserPasswordDialog)"
-            size="small"
-            styleClass="px-4 w-10rem"
-            severity="primary"
-          >
-            {{ newUserPasswordDialog }}
-          </p-button>
-        </div>
-      </div>
-    </p-dialog>
-  </div>
 </div>
