feat(lad-places-form): replace old text-search with new one

--- a/src/app/components/forms/lad-places-form/lad-places-form.component.html
+++ b/src/app/components/forms/lad-places-form/lad-places-form.component.html
@@ -2,14 +2,16 @@
 
 <app-search-input
   placeholder="قسمتی از نام را کنید."
-  (valueChange)="searchLadPlace($event)"
+  [asyncSearchFn]="searchLADPlace"
+  [itemMatchesQuery]="filterLADPlace"
+  (searchResult)="handelSearchLADPlaces($event)"  
 />
 
 <p-table
   class="col-12"
+  styleClass="overflow-x-auto"
   [columns]="cols"
   [value]="ladPlaces"
-  styleClass="overflow-x-auto"
   [tableStyle]="{ 'min-width': '40rem' }"
 >
   <ng-template #caption>
