feat(driver-info-form): use onSearchQuery instead of singleResultSearchFn to simplify search logic in app-search-text

--- a/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
@@ -14,8 +14,7 @@
         placeholder="جستجو براساس شماره ملی راننده"
         searchButtonLabel="استعلام از سامانه"
         [disableSearchButton]="this.searchForm.invalid"
-        [singleResultSearchFn]="loadDriverInfoFromAPI"
-        (searchResult)="onSearchDriver($event)"
+        [onSearchQuery]="loadDriverInfoFromAPI"
       />
     </div>
   </form>
