fix(user-info-form): rename props to match updated app-text-input component

--- a/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
+++ b/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
@@ -14,8 +14,7 @@
         [control]="searchPhone"
         validationField="mobile"
         [disableSearchButton]="this.searchForm.invalid || loading"
-        [singleResultSearchFn]="fetchUserByPhone"
-        (searchResult)="onSearch($event)"
+        [onSearchQuery]="fetchUserByPhone"
       />
     </div>
   </form>
