fix(user-menu-access-form): rename props to match updated app-text-input component

--- a/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
+++ b/src/app/components/forms/user-management-form/users-menu-access-form/users-menu-access-form.component.html
@@ -10,7 +10,8 @@
     </div>
   </form>
     <app-search-input
-      (input)="tt.filter($any($event.target).value, 'PGTitle', 'contains')"
+      (rawInput)="tt.filter($any($event), 'PGTitle', 'contains')"
+      [autoTriggerSearch]="true"
     ></app-search-input>
 
     <p-treetable
