--- a/src/app/themes/theme.scss
+++ b/src/app/themes/theme.scss
@@ -18,3 +18,50 @@
 .max-w-95vw {
   max-width: 90vw;
 }
+
+.z-6 {
+  z-index: 6 !important;
+}
+.z-7 {
+  z-index: 7 !important;
+}
+.z-8 {
+  z-index: 8 !important;
+}
+.z-9 {
+  z-index: 9 !important;
+}
+.z-10 {
+  z-index: 10 !important;
+}
+.z-11 {
+  z-index: 11 !important;
+}
+.z-12 {
+  z-index: 12 !important;
+}
+.z-13 {
+  z-index: 13 !important;
+}
+.z-14 {
+  z-index: 14 !important;
+}
+.z-15 {
+  z-index: 15 !important;
+}
+.z-16 {
+  z-index: 16 !important;
+}
+.z-17 {
+  z-index: 17 !important;
+}
+.z-18 {
+  z-index: 18 !important;
+}
+.z-19 {
+  z-index: 19 !important;
+}
+.z-20 {
+  z-index: 20 !important;
+}
+
