feat(auto-complete): add focus-based caching mode and clear cache on blur

--- a/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
+++ b/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
@@ -32,6 +32,7 @@
       (onFocus)="onFocusInput($event.target)"
       (onBlur)="onBlurInput($event.target)"
       (input)="onValueChanged($event.target)"
+      [completeOnFocus]="true"
     />
 
     <!-- Optional Select Icon -->
