chore(load-capacitor):fix typo tariff

--- a/src/app/components/forms/load-capacitor-form/load-capacitor-form.component.html
+++ b/src/app/components/forms/load-capacitor-form/load-capacitor-form.component.html
@@ -169,7 +169,7 @@
         [addonWidth]="addonWidth"
         label="تعرفه"
         [control]="tarrif"
-        validationField="tarrif"
+        validationField="tariff"
       />
     </div>
 
