chore(input-text): improve visual appearance of input when disabled

--- a/src/app/components/shared/inputs/text-input/text-input.component.html
+++ b/src/app/components/shared/inputs/text-input/text-input.component.html
@@ -34,7 +34,8 @@
           'px-2': true,
           'h-full': true,
           'w-full': true,
-          'bg-gray-100 text-gray-500 pointer-events-none opacity-60 cursor-not-allowed':
+          
+          'bg-gray-100 text-700 pointer-events-none opacity-90 cursor-not-allowed':
             control.disabled
         }"
         (focus)="onFocusInput(inputRef)"
