feat(tab-view): update TabViewComponent to support new TabConfig structure
- replaced input from array of TabView to TabConfig with sharedSignal and subTab
- added shared signal state injection for tabs with shearedSignal=true
- implemented component caching to optimize dynamic component creation
- added lifecycle hook calls for loaded components (onViewActivated)
- improved cleanup logic on component destroy

--- a/src/app/components/shared/tab-view/tab-view.component.html
+++ b/src/app/components/shared/tab-view/tab-view.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="views.length === 1; else multiView">
+<ng-container *ngIf="!tabConfig || tabConfig.subTab.length === 1; else multiView">
   <ng-container #singleContainer></ng-container>
 </ng-container>
 
@@ -6,7 +6,7 @@
   <p-tabs [(value)]="activeIndex" (valueChange)="onTabChange($event)">
     <div class="w-full overflow-x-auto">
       <p-tablist>
-        @for (view of views; track $index) {
+        @for (view of tabConfig?.subTab; track $index) {
           <p-tab class="text-sm" [value]="$index">{{ view.title }}</p-tab>
         }
       </p-tablist>
